--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "vendor/rspec"]
 	path = vendor/rspec
 	url = git://github.com/dchelimsky/rspec.git
-[submodule "vendor/rosc"]
-	path = vendor/rosc
+[submodule "vendor/samaaron-rosc"]
+	path = vendor/samaaron-rosc
 	url = git://github.com/samaaron/rosc.git
