--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "vendor/rainbow"]
 	path = vendor/rainbow
 	url = git://github.com/sickill/rainbow.git
+[submodule "vendor/arika-ruby-termios"]
+	path = vendor/arika-ruby-termios
+	url = git://github.com/arika/ruby-termios.git
